samples/_failures_safe/1761259509_614e49_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_8d1c9dba.c: In function ‘main’:
./samples/SAFE/__tmp_8d1c9dba.c:166:5: error: expected expression at end of input
  166 |     for (size_t i = 0; i < data_size; i++)
      |     ^~~
./samples/SAFE/__tmp_8d1c9dba.c:166:5: error: expected declaration or statement at end of input
